--- a/sistema-corretora/index.html
+++ b/sistema-corretora/index.html
@@ -5,33 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>compra e venda de imoveis</title>
+    <style>
+      *{
+        margin: 0;
+        padding: 0;
+      }
+      body{
+        background-color: rgb(87, 87, 87);
+        color: #fff;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      header{
+        background-color: black;
+        text-align: center;
+        padding: 20px;
+      }
+      nav{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        margin-top: 40px;
+      }
+      nav > a{
+        text-decoration: none;
+        background-color: red;
+        padding: 15px;
+        color: #fff;
+        border-radius: 5px;
+      }
+      nav > a:hover{
+        background-color: rgb(87, 87, 87);
+        transition: 0.5s;
+      }
+
+      main{
+        background-color: #fff;
+        color: black;
+        max-width: 600px;
+        margin-top: 46.5px;
+        text-align: center;
+
+        position: relative;
+        top: 50%;
+        left: 50%;
+
+        transform: translate(-50%, -50%);
+      }
+
+    </style>
   </head>
+
   <body>
-    <div>
-      <h1>Bem-vindo a <em>compra e venda de imoveis</em>!</h1>
-      <p>Frase de chamada para sua aplicação</p>
-    </div>
-
-    <div>
-      <a href="index.html">Página Inicial</a>
-      <a href="list-imoveis.html">Lista de Imóveis</a>
-      <a href="cadastro-imoveis.html">Anuncie seu Imóvel</a>
-      <a href="corretores.html">Cadastro de Corretores</a>
-    </div>
-
-    <div>
-      <!-- ADICIONAR INFORMAÇOES SOBRE SUA APLICAÇÃO -->
-      <p>o melhor local para comprar e vender imoveis da região!</p>
-    </div>
-
-    <div>
-      <p>Siga-nos nas redes sociais!</p>
+    <header>
 
       <div>
-        <img src="https://image.flaticon.com/icons/png/512/25/25305.png">
-        <img src="https://image.flaticon.com/icons/png/512/25/25425.png">
-        <img src="https://image.flaticon.com/icons/png/512/8/8800.png">
+        <h1>Bem-vindo a <em>compra e venda de imoveis</em>!</h1>
+        <p>Frase de chamada para sua aplicação</p>
       </div>
+
+      <nav>
+        <a href="index.html">Página Inicial</a>
+        <a href="list-imoveis.html">Lista de Imóveis</a>
+        <a href="cadastro-imoveis.html">Anuncie seu Imóvel</a>
+        <a href="corretores.html">Cadastro de Corretores</a>
+      </nav>
+    </header>
+
+      <main>
+        <div class="principal">
+          <!-- ADICIONAR INFORMAÇOES SOBRE SUA APLICAÇÃO -->
+          <h2>o melhor local para comprar e vender imoveis da região!</h2>
+      
+
+  
+          <p>Siga-nos nas redes sociais!</p>
+
+          <img src="https://image.flaticon.com/icons/png/512/25/25305.png">
+          <img src="https://image.flaticon.com/icons/png/512/25/25425.png">
+          <img src="https://image.flaticon.com/icons/png/512/8/8800.png">
+        </div>
+      </main>
     </div>
   </body>
 </html>
