terminei de estilizar todas a paginas do projeto

--- a/sistema-corretora/cadastro-imoveis.html
+++ b/sistema-corretora/cadastro-imoveis.html
@@ -4,49 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="cadastroImoveis.css">
     <title>Cadastro de Imóveis</title>
   </head>
   <body>
-    <div>
-      <p>cadastrar imoveis</p>
+    <header>
+      <div>
+        <h1>Compra e venda de imoveis</h1>
+      </div>
+      <nav>
+        <a href="index.html">Página Inicial</a>
+        <a href="list-imoveis.html">Lista de Imóveis</a>
+        <a href="cadastro-imoveis.html">Anuncie seu Imóvel</a>
+        <a href="corretores.html">Cadastro de Corretores</a>
+      </nav>
+    </header>
+
+    <div class="container">
+      <main>
+        <h2>Adicionar Imóvel</h2>
+        <form action="">
+          <div>
+            <label for="link-foto">Link para foto: </label>
+            <input type="url" id="link-foto" name="link-foto" />
+          </div>
+          <div>
+            <label for="descricaoImovel">Descrição do Imóvel: </label>
+            <!-- Adicione o id apropriado para o input abaixo -->
+            <input type="text" id="descricao" name="descrição" />
+          </div>
+          <div>
+            <label for="preco">Preço (em R$): </label>
+            <!-- Adicione o id apropriado e o type para receber números abaixo -->
+            <input type="number" id="precoImovel" name="preço" />
+          </div>
+          <div>
+            <!-- Preencha as propriedades necessárias para os elementos abaixo -->
+            <label>Contato do corretor: </label>
+            <input type="number" name="contato-corretor" id="contatoCorretor">
+          </div>
+          <div class="form-add">
+            <!-- Adicione ao type do botão abaixo o valor para que ele submeta o formulário -->
+            <button type="button">Adicionar</button>
+          </div>
+        </form>
+      </main>
     </div>
-
-    <div>
-      <a href="index.html">Página Inicial</a>
-      <a href="list-imoveis.html">Lista de Imóveis</a>
-      <a href="cadastro-imoveis.html">Anuncie seu Imóvel</a>
-      <a href="corretores.html">Cadastro de Corretores</a>
-    </div>
-
-    <h2>Adicionar Imóvel</h2>
-    <form action="">
-      <div>
-        <label for="link-foto">Link para foto: </label>
-        <input type="url" id="link-foto" name="link-foto" />
-      </div>
-
-      <div>
-        <label for="descricaoImovel">Descrição do Imóvel: </label>
-        <!-- Adicione o id apropriado para o input abaixo -->
-        <input type="text" id="descricao" name="descrição" />
-      </div>
-
-      <div>
-        <label for="preco">Preço (em R$): </label>
-        <!-- Adicione o id apropriado e o type para receber números abaixo -->
-        <input type="number" id="precoImovel" name="preço" />
-      </div>
-
-      <div>
-        <!-- Preencha as propriedades necessárias para os elementos abaixo -->
-        <label>Contato do corretor: </label>
-        <input type="number" name="contato-corretor" id="contatoCorretor">
-      </div>
-
-      <div class="form-add">
-        <!-- Adicione ao type do botão abaixo o valor para que ele submeta o formulário -->
-        <button type="button">Adicionar</button>
-      </div>
-    </form>
+    <footer>
+      <p><i>&copy; Thiago Mota Cordeiro</i></p>
+    </footer>
   </body>
 </html>
