--- a/sistema-corretora/list-imoveis.html
+++ b/sistema-corretora/list-imoveis.html
@@ -4,65 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="listsImoveis.css">
     <title>Lista de Imóveis</title>
   </head>
   <body>
-    <div>
-      <p>Nome da Aplicação</p>
-    </div>
+    <header>
+      <div>
+        <h1>Compra e Vendas de imoveis</h1>
+      </div>
+      <nav>
+        <a href="index.html">Página Inicial</a>
+        <a href="list-imoveis.html">Lista de Imóveis</a>
+        <a href="cadastro-imoveis.html">Anuncie seu Imóvel</a>
+        <a href="corretores.html">Cadastro de Corretores</a>
+      </nav>
+    </header>
 
-    <div>
-      <a href="index.html">Página Inicial</a>
-      <a href="list-imoveis.html">Lista de Imóveis</a>
-      <a href="cadastro-imoveis.html">Anuncie seu Imóvel</a>
-      <a href="corretores.html">Cadastro de Corretores</a>
-    </div>
-
-    <h2>Imóveis para alugar e comprar</h2>
-
-    <table>
-      <tr>
-        <th>Foto</th>
-        <th>Descrição</th>
-        <th>Preço (R$)</th>
-        <th>Contato do Corretor</th>
-      </tr>
-
-      <tr>
-        <td><img style="width: 100px; height: 100px;" src="img/pexels-binyamin-mellish-106399.jpg" alt="casa1" /></td>
-        <td>casa</td>
-        <td>145.000</td>
-        <td>00000000</td>
-      </tr>
-
-      <tr>
-        <td><img style="width: 100px; height: 100px;" src="img/pexels-brandon-nickerson-404173.jpg" alt="apto1" /></td>
-        <td>apto</td>
-        <td>235.000</td>
-        <td>99999999</td>
-      </tr>
-
-      <tr>
-        <td><img style="width: 100px; height: 100px;" src="img/pexels-live-on-shot-3663530.jpg" alt="apto2" /></td>
-        <td>apto</td>
-        <td>200.000</td>
-        <td>55555555</td>
-      </tr>
-
-      <tr>
-        <td><img style="width: 100px; height: 100px;" src="img/pexels-robert-so-12445995.jpg" alt="casa2" /></td>
-        <td>casa</td>
-        <td>500.000</td>
-        <td>22222222</td>
-      </tr>
-
-      <!-- Crie mais uma linha desta tabela abaixo \/ -->
-      <tr>
-        <td><img style="width: 100px; height: 100px;" src="img/pexels-sevenstorm-juhaszimrus-439391.jpg" alt="apto3" /></td>
-        <td>apto</td>
-        <td>340.000</td>
-        <td>77777777</td>
-      </tr>
-    </table>
+    <main>
+      <h2>Imóveis para alugar e comprar</h2>
+      <table class="tabela">
+        <tr>
+          <th>Foto</th>
+          <th>Descrição</th>
+          <th>Preço (R$)</th>
+          <th>Contato do Corretor</th>
+        </tr>
+        <tr>
+          <td><img style="width: 100px; height: 100px;" src="img/pexels-binyamin-mellish-106399.jpg" alt="casa1" /></td>
+          <td>casa</td>
+          <td>145.000</td>
+          <td>00000000</td>
+        </tr>
+        <tr>
+          <td><img style="width: 100px; height: 100px;" src="img/pexels-brandon-nickerson-404173.jpg" alt="apto1" /></td>
+          <td>apto</td>
+          <td>235.000</td>
+          <td>99999999</td>
+        </tr>
+        <tr>
+          <td><img style="width: 100px; height: 100px;" src="img/pexels-live-on-shot-3663530.jpg" alt="apto2" /></td>
+          <td>apto</td>
+          <td>200.000</td>
+          <td>55555555</td>
+        </tr>
+        <tr>
+          <td><img style="width: 100px; height: 100px;" src="img/pexels-robert-so-12445995.jpg" alt="casa2" /></td>
+          <td>casa</td>
+          <td>500.000</td>
+          <td>22222222</td>
+        </tr>
+        <!-- Crie mais uma linha desta tabela abaixo \/ -->
+        <tr>
+          <td><img style="width: 100px; height: 100px;" src="img/pexels-sevenstorm-juhaszimrus-439391.jpg" alt="apto3" /></td>
+          <td>apto</td>
+          <td>340.000</td>
+          <td>77777777</td>
+        </tr>
+      </table>
+    </main>
+    <footer>
+      <p><i>&copy; Thiago Mota Cordeiro</i></p>
+    </footer>
   </body>
 </html>
