--- a/sistema-corretora/corretores.html
+++ b/sistema-corretora/corretores.html
@@ -4,28 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="corretores.css">
     <title>Corretores</title>
   </head>
   <body>
-    <div>
-      <p>Nome da Aplicação</p>
-    </div>
+    <header>
+      <div>
+        <h1>Compra e Venda de imoveis</h1>
+      </div>
+      <nav>
+        <a href="index.html">Página Inicial</a>
+        <a href="list-imoveis.html">Lista de Imóveis</a>
+        <a href="cadastro-imoveis.html">Anuncie seu Imóvel</a>
+        <a href="corretores.html">Cadastro de Corretores</a>
+      </nav>
+    </header>
 
-    <div>
-      <a href="index.html">Página Inicial</a>
-      <a href="list-imoveis.html">Lista de Imóveis</a>
-      <a href="cadastro-imoveis.html">Anuncie seu Imóvel</a>
-      <a href="corretores.html">Cadastro de Corretores</a>
-    </div>
-
-    <h2>Corretores</h2>
-    <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
-    <ul>
-      <li>joao</li>
-      <li>pedro</li>
-      <li>victor</li>
-      <li>thiago</li>
-      <li>isaac</li>
-    </ul>
+    <main>
+      <h2>Corretores</h2>
+      <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
+      <ul>
+        <li>joao</li>
+        <li>pedro</li>
+        <li>victor</li>
+        <li>thiago</li>
+        <li>isaac</li>
+      </ul>
+    </main>
+    <footer>
+      <p><i>&copy; Thiago Mota Cordeiro</i></p>
+    </footer>
   </body>
 </html>
