--- a/sistema-corretora/index.html
+++ b/sistema-corretora/index.html
@@ -4,65 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="Paginainicial.css">
     <title>compra e venda de imoveis</title>
-    <style>
-      *{
-        margin: 0;
-        padding: 0;
-      }
-      body{
-        background-color: rgb(87, 87, 87);
-        color: #fff;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-      header{
-        background-color: black;
-        text-align: center;
-        padding: 20px;
-      }
-      nav{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        margin-top: 40px;
-      }
-      nav > a{
-        text-decoration: none;
-        background-color: red;
-        padding: 15px;
-        color: #fff;
-        border-radius: 5px;
-      }
-      nav > a:hover{
-        background-color: rgb(87, 87, 87);
-        transition: 0.5s;
-      }
-
-      main{
-        background-color: #fff;
-        color: black;
-        max-width: 600px;
-        margin-top: 46.5px;
-        text-align: center;
-
-        position: relative;
-        top: 50%;
-        left: 50%;
-
-        transform: translate(-50%, -50%);
-      }
-
-    </style>
   </head>
 
   <body>
     <header>
-
-      <div>
-        <h1>Bem-vindo a <em>compra e venda de imoveis</em>!</h1>
-        <p>Frase de chamada para sua aplicação</p>
-      </div>
-
+        <div>
+          <h1>Compra e Venda de imoveis</h1>
+          <p>Frase de chamada para sua aplicação</p>
+        </div>
       <nav>
         <a href="index.html">Página Inicial</a>
         <a href="list-imoveis.html">Lista de Imóveis</a>
@@ -72,19 +23,22 @@
     </header>
 
       <main>
-        <div class="principal">
-          <!-- ADICIONAR INFORMAÇOES SOBRE SUA APLICAÇÃO -->
+        <!-- ADICIONAR INFORMAÇOES SOBRE SUA APLICAÇÃO -->
+        <article class="descricao">
           <h2>o melhor local para comprar e vender imoveis da região!</h2>
-      
-
-  
           <p>Siga-nos nas redes sociais!</p>
+        </article>
 
-          <img src="https://image.flaticon.com/icons/png/512/25/25305.png">
-          <img src="https://image.flaticon.com/icons/png/512/25/25425.png">
-          <img src="https://image.flaticon.com/icons/png/512/8/8800.png">
+        <div class="redesSociais">
+          <img src="https://img.shields.io/badge/Instagram-E4405F?style=for-the-badge&logo=instagram&logoColor=white">
+          <img src="https://img.shields.io/badge/Facebook-1877F2?style=for-the-badge&logo=facebook&logoColor=white">
+          <img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white">
         </div>
       </main>
+
+      <footer>
+        <p><i>&copy; Thiago Mota Cordeiro</i></p>
+      </footer>
     </div>
   </body>
 </html>
